# strudai

./: .gitignore  CLAUDE.md  README.md  compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: deploy.yml  pr-deploy.yml
backend/: CLAUDE.md  agent.py  agents.py  app.py  fixer.py  usage.py  ws.py
backend/agents/: fixer.py
backend/knowledge/: build.py  compress.py  compressed.md  fetch_examples.py  fetch_workshop.py  workshop.md
backend/prompts/: __init__.py  fixer.j2  performer.j2  system.j2
backend/skills/: __init__.py  base.py  coding.py  debugging.py  docs.py  fixing.py  performing.py  persona.py  samples.py  set_planning.py
backend/tools/: __init__.py  registry.py  sample_search.py  set_plan.py  strudel_read_code.py  strudel_read_console.py  strudel_read_cycle.py  strudel_update_code.py  verify_fix.py  web_search.py
docker/nginx/: default.conf  security_headers.conf
frontend/: app.js  index.html  styles.css
knowledge/: agent.md  build.py  compress.py  compressed.md  fetch.py  set.md  style.md
prompts/: agent.md  build.py  compress.py  fetch.py  hydra.md  set.md  strudel.md  style.md
public/: strudel_examples.md  strudel_samples.json
src/: App.tsx  api.ts  index.css  main.tsx  store.ts  system-prompt.ts  types.ts
src/agent/: accent.ts  api.ts  audio-analyzer.ts  audio-intercept.ts  canvas-intercept.ts  error-buffer.ts  performer.ts  set-preplan.ts  set-state.ts  system-prompt.ts  tools.ts  types.ts  visual-capture.ts
tests/: conftest.py
(+31 files in other folders)
