[project]
name = "strudelgpt"
version = "0.1.0"
description = "StrudelGPT"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "langchain-anthropic>=1.3.4",
    "langgraph>=1.0.10",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
